--- a/FAQ.html
+++ b/FAQ.html
@@ -1,79 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>FAQs</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<!-- Bootstrap core CSS -->
-		<link href="css/bootstrap.css" rel="stylesheet">
-		<!-- Custom styles for this template go here -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>FAQs</title>
 
+    <!--css files start here-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/new_style.css">
+    <link rel="stylesheet" href="css/new_faq.css">
+    <!--css files end here-->
 
-		<!-- jQuery starts here (required for Bootstrap to work) -->
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="js/jquery.media.js" type="text/javascript"></script>
-		<!--jQuery files end here-->
+	<!-- jQuery starts here (required for Bootstrap to work) -->
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="js/jquery.media.js" type="text/javascript"></script>
+	<!--jQuery files end here-->
 
-		<!-- JavaScript files start here-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
-		<!--JavaScript files end here-->
+	<!-- JavaScript files start here-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--JavaScript files end here-->
 
-		<!--Twitter starts here-->
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		<!--Twitter ends here-->
-
-		<!--css files start here-->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/FAQ.css" rel="stylesheet">
-		<link href="css/general.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
-		<!--css files end here-->
+    <!--Tooltips jQuery start here-->
+    <script>
+      $(function () {
+        $('#date').tooltip();
+      });
+    </script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <script> 
+      $(function () {
+        $('#work').tooltip();
+      });
+    </script>
+    <!--Tooltips jQuery end-->
 	</head>
-	<body>
-	    <!--navbar starts here-->
-	    <!-- Main jumbotron for a primary marketing message or call to action -->
-	    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="pages">
-	      <div class="container-fluid-navigation-pages">
-	        <div class="row" id="nav-row">
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-project-name">
-	              <a href="index.html">Chris Joiner | Web Developer</a>
-	            </div>
-	          </div><!--col end-->
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-header">
-	              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	              <span class="sr-only">Toggle navigation</span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              </button>
-	            </div><!--navbar-header end-->
-	            <div class="navbar-collapse collapse">
-	              <ul class="nav navbar-nav">
-	                <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
-	                <li><a href="about.html">About</a></li>
-	                <li><a href="work.html">Work</a></li>
-	                <li><a href="contact.html">Contact</a></li>
-	                <li><a href="FAQ.html">FAQ</a></li>
-	                <li><a href="videos.html">Videos</a></li>
-	              </ul>
-	            </div><!--navbar-collapse-collapse end-->
-	          </div><!--col end-->
-	        </div><!--nav-row ends-->
-	      </div><!--nav container ends-->
-	    </nav><!--navbar ends-->
-	    <div class="styles">
-		    <div class="container-fluid page-styles" id="FAQ"><!--container FAQ start-->
-		    	<div class="FAQ">
-			    	<div class="header">
-		          		<h1>FAQ's</h1>
-		          	</div>
-		          	<div class="faq-page-pic">
-		          	</div>
+	<body class="body">
+	    <header class="main-header">
+			<content class="main-header-image-text">
+				<h1>FAQs</h1>
+				<p>Got a question? Check out common questions below</p>
+			</content>
+	    	<img src="img/question-mark-463497_1920.jpg">
+			<nav>
+				<ul>
+				  <li><a href="index.html">Home</span></a></li>
+				  <li><a href="about.html">About</a></li>
+				  <li><a href="contact.html">Contact</a></li>
+				  <li><a href="work.html">Work</a></li>
+				  <li  class="active"><a href="#">FAQ</a></li>
+				</ul>
+			</nav>
+	    </header>
+
+		<div class="mainContent">
+      		<div class="content">
+        		<article class="topContent">
 					<div class="panel-group" id="FAQ-accordion">
 					<div class="panel panel-default">
 					  <div class="panel-heading">
@@ -118,14 +104,13 @@
 					  </div>
 		            </div>
 		          </div><!--panel-group end-->
-		        </div><!--FAQ end-->
-	        </div><!--container-fluid page-styles end-->	
-	        <footer> 
-	              &copy; Chris Joiner | Web Developer 2015 
-	              <a href="https://twitter.com/cjoiner20" class="twitter-follow-button" data-show-count="false">Follow @cjoiner20</a>
-	              <div class="fb-like" data-href="https://chris-joiner.bitballoon.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-	        </footer>
-	    </div><!--styles end-->		
+		        </article>
+	        </div>
+	    </div>
+
+	    <footer class="mainFooter">
+	      <p>&copy 2016 <a href="www.chrisjoiner.co.uk">chrisjoiner.co.uk</a></p>
+	    </footer>
 	</body>
 </html>
 
