--- a/about.html
+++ b/about.html
@@ -1,148 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>About</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<!-- Bootstrap core CSS -->
-		<link href="css/bootstrap.css" rel="stylesheet">
-		<!-- Custom styles for this template go here -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>About</title>
 
+    <!--css files start here-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/new_style.css">
+    <link rel="stylesheet" href="css/new_about.css">
+    <!--css files end here-->
 
-		<!-- jQuery starts here (required for Bootstrap to work) -->
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="js/jquery.media.js" type="text/javascript"></script>
-		<!--jQuery files end here-->
+	<!-- jQuery starts here (required for Bootstrap to work) -->
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="js/jquery.media.js" type="text/javascript"></script>
+	<!--jQuery files end here-->
 
-		<!-- JavaScript files start here-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
-		<!--JavaScript files end here-->
+	<!-- JavaScript files start here-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--JavaScript files end here-->
 
-		<!--Twitter starts here-->
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		<!--Twitter ends here-->
+    <!--Tooltips jQuery start here-->
+    <script>
+      $(function () {
+        $('#date').tooltip();
+      });
+    </script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <script> 
+      $(function () {
+        $('#work').tooltip();
+      });
+    </script>
+    <!--Tooltips jQuery end-->
 
-		<!--css files start here-->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/about_styles.css" rel="stylesheet">
-		<link href="css/general.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
-		<!--css files end here-->
-	</head>
-	<body>
-	    <!--navbar starts here-->
-	    <!-- Main jumbotron for a primary marketing message or call to action -->
-	    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="pages">
-	      <div class="container-fluid-navigation-pages">
-	        <div class="row" id="nav-row">
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-project-name">
-	              <a href="index.html">Chris Joiner | Web Developer</a>
-	            </div>
-	          </div><!--col end-->
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-header">
-	              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	              <span class="sr-only">Toggle navigation</span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              </button>
-	            </div><!--navbar-header end-->
-	            <div class="navbar-collapse collapse">
-	              <ul class="nav navbar-nav">
-	                <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
-	                <li><a href="about.html">About</a></li>
-	                <li><a href="work.html">Work</a></li>
-	                <li><a href="contact.html">Contact</a></li>
-	                <li><a href="FAQ.html">FAQ</a></li>
-	                <li><a href="videos.html">Videos</a></li>
-	              </ul>
-	            </div><!--navbar-collapse-collapse end-->
-	          </div><!--col end-->
-	        </div><!--nav-row ends-->
-	      </div><!--nav container ends-->
-	    </nav><!--navbar ends-->
-	    <div class="styles">
-			<div class="container-fluid page-styles">	
-				<div class="about">
-					<div class="header">
-		              <h1>About</h1>
-		            </div>
-					<div class="about-page-pic">
-			        </div><!--about-page-pic end-->
+  </head>
+	<body class="body">
+	    <header class="main-header">
+			<content class="main-header-image-text">
+				<h1>About Me</h1>
+				<p>Find out all about me</p>
+			</content>
+	    	<img src="img/about-garden.jpg">
+			<nav>
+				<ul>
+				  <li><a href="index.html">Home</span></a></li>
+				  <li class="active"><a href="#">About</a></li>
+				  <li><a href="contact.html">Contact</a></li>
+				  <li><a href="work.html">Work</a></li>
+				  <li><a href="FAQ.html">FAQ</a></li>
+				</ul>
+			</nav>
+	    </header>
+
+		<div class="mainContent">
+      		<div class="content">
+        		<article class="topContent">
 			        <div class="about-intro">
-			        	<p class="about-intro-text" style="text-align: center; color: #b7b7b7; font-size: 2.5em; margin-top: 50px; margin-bottom: 50px"><i>From Project Manager to <strong style="color: #35c793"> Web Developer </strong></i></p>
-			        </div><!--about intro end-->
+			        	<h2 class="about-intro-text">From Project Manager to <italic style="color: #e56038"> Web Developer </strong></h2>
+			        </div>
+
 		            <div class="intro-column">
-		              <p style="color: #565656; opacity: 0.8; text-align: center; font-size: 16px; font-style: normal; font-family: arial, calibri, sans-serif; line-height: 32px;">Let me introduce myself properly. <strong>I'm Chris Joiner.</strong><br>I'm a Junior Web Developer based in Birmingham, England. <br> I decided to change careers and become a Web Developer in September 2015 and it was the best decision I have made!</p>
-		            </div><!--intro column end-->
-		            <div class="skills" style="margin-top: 20px; background-color: #35c793">
+		              <p>Let me introduce myself properly. <strong>I'm Chris Joiner.</strong></p>
+		              <p>I'm a Junior Web Developer based in Birmingham, England.</p>
+		              <p>I decided to change careers and become a Web Developer in September 2015 and it was the best decision I have made!</p>
+		            </div>
+		        </article>
+
+		        <section class="skills-section">
+	        		<div class="row">
+	        			<div class ="col-md-4 col-lg-4 col-sm-12">		
+					        <aside class="skills-column-1">
+					        	<article>
+			        				<h2>So what do I know?</h2>
+			        				<p>- HTML5 <i>[Proficient]</i><p>
+			        				<p>- CSS3 <i>[Proficient]</i><p>
+			        				<p>- Ruby on Rails <i>[Learning]</i><p>
+			        				<p>- Javascript <i>[Learning]</i><p>
+			        				<p>- Git <i>[Proficient]</i><p>
+			        				<p>- Bootstrap <i>[Learning]</i><p>
+					        	</article>
+					        </aside>
+	        			</div>
+	        			<div class ="col-md-4 col-lg-4 col-sm-12">		
+					        <aside class="skills-column-2">
+					        	<article>
+			        				<h2>Other Skills</h2>
+			        				<p>- Project Management<p>
+			        				<p>- Organisation<p>
+			        				<p>- Time Management<p>
+			        				<p>- Team Work<p>
+			        				<p>- Attention to Details<p>
+					        	</article>
+					        </aside>
+	        			</div>
+	        			<div class ="col-md-4 col-lg-4 col-sm-12">		
+					        <aside class="skills-column-3">
+					        	<article>
+			        				<h2>Other Interests</h2>
+			        				<p>- Football<p>
+			        				<p>- Squash<p>
+			        				<p>- Running<p>
+			        				<p>- Climbing<p>
+			        				<p>- Skydiving<p>
+			        				<p>- Bungee Jumping<p>
+					        	</article>
+					        </aside>
+	        			</div>        			        			
+	        		</div>				        
+	        	</section>
+
+	        	<section class="bottom-section">
+	        		<article>
 		            	<div class="row">
-		            		<div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
-		            			<h2 style="color: #FFF">So, what do I know?</h2>
-					            <ul id="skills_list" style="padding-top: 20px; color: #FFF">
-				                    <li>HTML5</li><br>
-				                    <li>CSS3</li><br>
-				                    <li>Ruby on Rails</li><br>
-				                    <li>JavaScript</li><br>
-				                    <li>Git</li><br>
-				                    <li>Bootstrap</li><br>
-				                </ul>
-				            </div><!--col end-->
-				            <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
-				            	<h2 style="color: #FFF">Other skills:</h2>
-				            	<ul id="other-skills" style="padding-top: 20px; color: #FFF">
-				            		<li>Project Management</li><br>
-				            		<li>Organisation</li><br>
-				            		<li>Time Management</li><br>
-				            		<li>Team Work</li><br>
-				            	</ul>
-				        	</div><!--col end-->
-				            <div class="col-md-4 col-lg-4 col-sm-12 col-xs-12">
-				            	<h2 style="color: #FFF">Other interests:</h2>
-				            	<ul id="interests" style="padding-top: 20px; color: #FFF">
-				            		<li>Football</li><br>
-				            		<li>Squash</li><br>
-				            		<li>Running</li><br>
-				            		<li>Climbing</li><br>
-				            		<li>Extreme Sports - Skydiving / Bungee Jumping</li>
-				            	</ul>
-				        	</div><!--col end-->	
-				        </div><!--row end-->
-		            </div> 
-		            <div class="cv" style="margin-bottom: 30px">
-		            	<div class="row">
-		            		<div class="col-md-8 col-lg-8 col-sm-12">
+		            		<div class="col-md-8 col-lg-8 col-sm-12" id="about-cv">
 						        <div class="about-main-text" id="more_about_me">
-									<h2 style="color: #565656; padding-bottom: 20px">Whats next?</h2>
-									<p style="color: #565656">I have been training as a web developer for the past 8 months. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
-									<p style="color: #565656">Given my eagerness to learn I know that if given the chance I will excel at it. I am currently looking specifically at Front End Developer roles as this is where my skill set is currently strongest. That said, my ambition is to become a Full Stack Web Developer.</p><br>
-									<p style="color: #565656">Check out the 'My Work' section of this site for projects I have completed and am currently working on. For more details about me, check out my CV below:</p>
+									<h2>Whats next?</h2>
+									<p>I have been training as a web developer for the past 8 months. I have completed a course with Career Foundry and am now looking for a Front End Web Developer role in Birmingham.</p><br>
+									<p>Given my eagerness to learn I know that if given the chance I will excel at it. I am currently looking specifically at Front End Developer roles as this is where my skill set is currently strongest. That said, my ambition is to become a Full Stack Web Developer.</p><br>
+									<p>Check out the 'My Work' section of this site for projects I have completed and am currently working on. For more details about me, check out my CV below:</p>
+									
 									<div class="cv-window" id="modal_div" data-backdrop="static" data-keyboard="false">
 										<div class="modal-button" id="cv">
 										  <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Curriculum Vitae</button>
-										</div><!--modal button end--><!--CV MODAL AT END OF HTML BENEATH FOOTER-->	
-									</div><!--cv-window div end-->						          
-						        </div><!--main text end-->
-		            		</div><!--col end-->
+										</div><!--CV MODAL AT END OF HTML BENEATH FOOTER-->	
+									</div>
+						        </div>
+		            		</div>
 							<div class="col-sm-12 col-md-4 col-lg-4" id="profile-pic">
-								<div class="image" style="padding-top: 50px">
-								  <img src="img/profile_pic_colour.jpeg" alt="Chris Joiner" class="img-responsive" id="profile-pic-image">
-								</div>
+								<img src="img/profile_pic_colour.jpeg" alt="Chris Joiner" class="img-responsive" id="profile-pic-image">
 							</div><!--col end-->
 						</div><!--row end-->
-			        </div><!--CV end-->	
-			    </div><!--about end-->
-			</div><!--container-fluid page styles end -->	
-	        <footer> 
-	              &copy; Chris Joiner | Web Developer 2015 
-	              <a href="https://twitter.com/cjoiner20" class="twitter-follow-button" data-show-count="false">Follow @cjoiner20</a>
-	              <div class="fb-like" data-href="https://chris-joiner.bitballoon.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-	        </footer>
+					</article>
+			    </section>
+
+		    <footer class="mainFooter">
+		      <p>&copy 2016 <a href="www.chrisjoiner.co.uk">chrisjoiner.co.uk</a></p>
+		    </footer>
+
 		    <!--Curriculum Vitae Large modal start-->
 		    <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 		      <div class="modal-dialog modal-lg">
@@ -158,6 +158,6 @@
 		        </div><!--modal content end-->
 		      </div><!--modal dialog modal lg end-->
 		    </div><!--modal fade end--> 	
-	    </div><!--styles end-->		
+
 	</body>
 </html>
