--- a/contact.html
+++ b/contact.html
@@ -1,142 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Contact Me</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<!-- Bootstrap core CSS -->
-		<link href="css/bootstrap.css" rel="stylesheet">
-		<!-- Custom styles for this template go here -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contact</title>
 
+    <!--css files start here-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/new_style.css">
+    <link rel="stylesheet" href="css/new_contact.css">
+    <!--css files end here-->
 
-		<!-- jQuery starts here (required for Bootstrap to work) -->
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="js/jquery.media.js" type="text/javascript"></script>
-		<!--jQuery files end here-->
+	<!-- jQuery starts here (required for Bootstrap to work) -->
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="js/jquery.media.js" type="text/javascript"></script>
+	<!--jQuery files end here-->
 
-		<!-- JavaScript files start here-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
-		<!--JavaScript files end here-->
+	<!-- JavaScript files start here-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="js/scripts.js"></script>
+	<!--JavaScript files end here-->
 
-		<!--Twitter starts here-->
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		<!--Twitter ends here-->
+    <!--Tooltips jQuery start here-->
+    <script>
+      $(function () {
+        $('#date').tooltip();
+      });
+    </script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <script> 
+      $(function () {
+        $('#work').tooltip();
+      });
+    </script>
+    <!--Tooltips jQuery end-->
 
-		<!--css files start here-->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/contact.css" rel="stylesheet">
-		<link href="css/general.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
-		<!--css files end here-->
-	</head>
-	<body>
-	    <!--navbar starts here-->
-	    <!-- Main jumbotron for a primary marketing message or call to action -->
-	    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="pages">
-	      <div class="container-fluid-navigation-pages">
-	        <div class="row" id="nav-row">
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-project-name">
-	              <a href="index.html">Chris Joiner | Web Developer</a>
-	            </div>
-	          </div><!--col end-->
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-header">
-	              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	              <span class="sr-only">Toggle navigation</span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              </button>
-	            </div><!--navbar-header end-->
-	            <div class="navbar-collapse collapse">
-	              <ul class="nav navbar-nav">
-	                <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
-	                <li><a href="about.html">About</a></li>
-	                <li><a href="work.html">Work</a></li>
-	                <li><a href="contact.html">Contact</a></li>
-	                <li><a href="FAQ.html">FAQ</a></li>
-	                <li><a href="videos.html">Videos</a></li>
-	              </ul>
-	            </div><!--navbar-collapse-collapse end-->
-	          </div><!--col end-->
-	        </div><!--nav-row ends-->
-	      </div><!--nav container ends-->
-	    </nav><!--navbar ends-->
-	    <div class="styles">
-			<div class="container-fluid page-styles">	
-		    	<div class="contact">
-			    	<div class="header">
-		          		<h1>Contact Me</h1>
-		          	</div>
-		          	<div class="contact-page-pic">
-			        </div><!--contact-page-pic end-->
-					<div class="row" id="contact-row-1">  
-		               <!-- <div class="col-sm-12 col-md-6">
-		                  <form>
-		                    <div class="form-group">
-		                      <input placeholder="Enter your name" class="form-control" type="text" id="name" title="Enter your name">
-		                      <label for="name" class="sr-only">Name</label>
-		                    </div>
-		                    <div class="form-group">
-		                      <input placeholder="Enter your phone number" class="form-control" type="text" id="phone" title="Enter your phone number" maxlength="11">
-		                      <label for="phone" class="sr-only">Enter your phone number</label>
-		                    </div>
-		                    <div class="form-group">
-		                      <input placeholder="Enter you email address *" class="form-control" type="email" id="email" required="required" title="Enter your email address so we can contact you">
-		                      <label for="email" class="sr-only">Email Address</label>
-		                    </div>
-		                    <textarea placeholder="Enter your message *" class="form-control" id="message" style="resize-none" cols="60" rows="10" required="required" title="I'm afraid you can't contact us yet as we are still getting set up" maxlength="500">
-		                    </textarea>
-		                    <label for="message" class="sr-only">Your message</label>
-		                    <button type="submit" class="btn btn-default" id="button">Submit</button>
-		                  </form>
-		                  <div class="User-text">
-		                    <p id="charCount"></p>
-		                    <p id="thankyou-message"></p>
-		                    <p id="visible-comment"></p>
-		                  </div>                    
-		                </div>--><!--col end-->
+  </head>
+	<body class="body">
+	    <header class="main-header">
+			<content class="main-header-image-text">
+				<h1>Contact Me</h1>
+				<p>Like what you see? Give me a shout!</p>
+			</content>
+	    	<img src="img/red-phone-box-bw.jpg">
+			<nav>
+				<ul>
+				  <li><a href="index.html">Home</span></a></li>
+				  <li><a href="about.html">About</a></li>
+				  <li class="active"><a href="#">Contact</a></li>
+				  <li><a href="work.html">Work</a></li>
+				  <li><a href="FAQ.html">FAQ</a></li>
+				</ul>
+			</nav>
+	    </header>
+
+		<div class="mainContent">
+      		<div class="content">
+        		<article class="topContent">
+        			<div class="row">
 		                <div class="col-sm-12 col-md-6 col-lg-6">
 		                  <div class="contact-main-text">
-		                  	<h2 style="color: #565656; padding-bottom: 20px">Give me a shout!</h2>
-		                  	<p style="font-size: 1em; margin-left: 0%; padding-bottom: 20px">You can reach me on the following (although Email is probably best!)</p>
+		                  	<h2>Give me a shout!</h2>
+		                  	<p>You can reach me on the following (although email is probably best!)</p>
 		                    <p><span class="glyphicon glyphicon-earphone"></span>&nbsp; +44(0)7854 420030</p>
 		                    <p><span class="glyphicon glyphicon-envelope"></span>&nbsp; <a href="mailto:cjoiner20@hotmail.co.uk">cjoiner20@hotmail.co.uk</a></p>
-		                    <!--<iframe width="85%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJlek3Gsu9cEgRUHBqgq4n_s8&key=AIzaSyBKqZgg94LNorCgHNUmoUdC3K6RSibVr4M" allowfullscreen class="google-map"></iframe>-->
-		                  </div><!--contain main text end-->
-		                </div><!--col end-->
+		                  </div>
+		                </div>
 		                <div class="col-md-6 col-lg-6 col-sm-12">
-		                	<div id="map" style="margin-bottom: 25px"></div>
-		                </div><!--col end-->
-		            </div><!--contact-row-1 end-->
-	        	</div><!--contact end-->
-			</div><!--container-fluid page styles end -->	
-	        <footer> 
-	              &copy; Chris Joiner | Web Developer 2015 
-	              <a href="https://twitter.com/cjoiner20" class="twitter-follow-button" data-show-count="false">Follow @cjoiner20</a>
-	              <div class="fb-like" data-href="https://chris-joiner.bitballoon.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-	        </footer>
-		    <script type="text/javascript">
-		      var $root = $('html, body');
-		        $('.navbar-nav a').click(function() {
-		          var href = $.attr(this, 'href');
-		          $root.animate({
-		            scrollTop: $(href).offset().top
-		          }, 500, function () {
-		            window.location.hash = href;
-		          });
-		          return false;
-		        });
-		    </script>
-		    <!--js googlemaps api key-->
-		    <script type="text/javascript" src="js/scripts.js"></script>
-		    <script async defer
-		      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv2uAsK9QJgJesSNZ0x7zouL043IUiUtw&callback=initMap">
-		    </script>
-	    </div><!--styles end-->		
+		                	<div id="map"></div>
+		                </div>
+		            </div>
+		        </article>
+		    </div>
+		</div>
+
+	    <footer class="mainFooter">
+	      <p>&copy 2016 <a href="www.chrisjoiner.co.uk">chrisjoiner.co.uk</a></p>
+	    </footer>
+
+
+	    <!--js googlemaps api key-->
+	    <script type="text/javascript" src="js/scripts.js"></script>
+	    <script async defer
+	      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAv2uAsK9QJgJesSNZ0x7zouL043IUiUtw&callback=initMap">
+	    </script>
+
 	</body>
 </html>
