--- a/index.html
+++ b/index.html
@@ -4,27 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chris Joiner | Trainee Web Developer</title>
-    <!-- Latest compiled and minified CSS -->
+
+    <!--css files start here-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <!-- Custom styles for this template go here -->
-
-
-    <!-- jQuery starts here (required for Bootstrap to work) -->
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/jquery.media.js" type="text/javascript"></script>
-    <!--jQuery files end here-->
-
-    <!-- JavaScript files start here-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
-    <!--JavaScript files end here-->
-
-    <!--Twitter starts here-->
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    <!--Twitter ends here-->
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/new_style.css">
+    <!--css files end here-->
 
     <!--Tooltips jQuery start here-->
     <script>
@@ -44,187 +29,104 @@
     </script>
     <!--Tooltips jQuery end-->
 
-    <!--css files start here-->
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/about_styles.css" rel="stylesheet">
-    <link href="css/FAQ.css" rel="stylesheet">
-    <link href="css/contact.css" rel="stylesheet">
-    <link href="css/work.css" rel="stylesheet">
-    <link href="css/videos.css" rel="stylesheet">
-    <link href="css/general.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <!--css files end here-->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
   </head>
-  <body> <!--insert inside body tag to so navbar highlights which section you are on data-spy="scroll" data-target=".navbar"-->
-    <!--facebook starts here-->
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.4";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-    <!--facebook ends here-->
-    <!--navbar starts here-->
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div id="home"></div>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container-fluid-navigation-main">
-        <div class="row" id="nav-row">
-          <div class="col-sm-8 col-md-6">
-            <div class="navbar-project-name">
-              <a href="#">Chris Joiner | Web Developer</a>
-            </div>
-          </div><!--col end-->
-          <div class="col-sm-8 col-md-6">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              </button>
-            </div><!--navbar-header end-->
-            <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
-                <li><a href="#home"><span class="glyphicon glyphicon-home"></span></a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#FAQ">FAQ</a></li>
-                <li><a href="#videos">Videos</a></li>
-              </ul>
-            </div><!--navbar-collapse-collapse end-->
-          </div><!--col end-->
-        </div><!--nav-row ends-->
-      </div><!--nav container ends-->
-    </nav><!--navbar ends-->
-    <!--<div class="jumbotron">
-      <div class="container">
-        <h1>Chris Joiner |<br>Web Developer</h1>
-      </div>
-      <div class="container">
-        <!--<p><strong>From admin manager to full stack web developer</strong></p>-->
-      </div>
-      <div class="styles"><!--styles (home) div start-->
-        <div class="container-fluid home-page-image">
-          <div class="home-page-image-text">
-            <h1 class="home-page-image-header">Chris Joiner | Web Developer</p>
-          </div>
-        </div><!--container fluid end-->
-        <section class="portfolio-concepts-and-goals-section">
-          <div class="container-fluid portfolio" id="portfolio-concepts-and-goals">
-            <!-- Example row of columns -->
-            <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" id="portfolio">
-                <h2>About this site...</h2><br>
+  <body class="body">
+
+    <header class="main-header">
+      <content class="main-header-image-text">
+        <h1>Chris Joiner | Web Developer</h1>
+        <p>Welcome to my portfolio site</p>
+      </content>
+      <img src="img/laptop-1209008.jpg">
+
+      <nav>
+        <ul>
+          <li class="active"><a href="#home">Home</span></a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="FAQ.html">FAQ</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="mainContent">
+      <div class="content">
+        <article class="topContent">
+
+          <div class="row">
+            <div class="col-md-4 col-lg-4 col-sm-12" id="column-1">
+              <content>
+                <h2>About this site...</h2><hr><br>
                 <p>Welcome to my Portfolio site.</p><br>
                 <p>I have included here, everything you need to know about me. If you want to check out my CV, you can do so by navigating to the 'About Me' section and clicking on 'Curriculum Vitae'. If you want to check out my current projects, then scroll on down to the 'My Work' section.</p> <br>
                 <p>I have recently completed the Career Foundry Web Developer course and am now looking to build upon what I have learnt. All new projects will be posted here once complete.</p> <br>
                 <p>Please feel free to have a look around and if you want to contact me, you can do so under the 'Contact Me' section. I look forward to hearing from you!</p></br>
-                <a href="#about"<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Click here to take a look around">Look Around</button></a>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" id="project-goals">
-                <h2>Career Foundry Course</h2><br>
+                <a href="#aboutContent"<button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Click here to take a look around">Look Around</button></a>
+              </content>
+            </div>
+            <div class="col-md-4 col-lg-4 col-sm-12" id="column-2">
+              <content>
+                <h2>Career Foundry</h2><hr><br>
                 <p>I have recently completed the Career Foundry Web Developer course over a 6 month period on a part time basis.</p> <br>
                 <p>Throughout the course I have learnt HTML5, CSS3, Ruby on Rails, Github, Javascript, Ajax and much much more, all of which will hopefully be evident throughout this site and also my <a href="http://thewhiteleycollection.herokuapp.com/" target="_blank">Rails App</a></p></br>
                 <p>Click the link below to see all about the Career Foundry Course</p></br>
                 <a href="http://careerfoundry.com/courses/how-to-become-a-web-developer"<button type="button" class="btn btn-default" target="_blank" data-toggle="tooltip" data-placement="top" title="Check out Career Foundry!">More details</button></a>
-              </div>
-              <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4" id="course-goals">
-                <h2>What's next?</h2></br>
+              </content>            
+            </div>
+            <div class="col-md-4 col-lg-4 col-sm-12" id="column-3">
+              <content>
+                <h2>What's next?</h2><hr></br>
                 <p>Get a job!</p></br>
                 <p>I made the decision to switch careers and move into web development; now that I have completed the Career Foundry course, my aim is to get a Front End Web Developer role, where I will be able to build upon what I have learnt and develop my knowledge so I can become a full stack web developer. Having worked in other areas I have developed a wide range of diverse skills that will all strongly benefit me in my new role.</p></br> 
                 <p>Check out my CV by clicking the link below</p><br>
                 <a href="about.html#more_about_me" <button type="button" class="btn btn-default" data-toggle="tooltip" data-placement="top" title="Check out my CV!">View my CV</button></a>
+              </content>
+            </div>
+          </div>
+        </article>
+        <article class="bottomContent">
+          <div class="row">
+            <div class="col-md-6 col-lg-6 col-sm-12" id="aboutContent">
+              <div class="image-wrapper" id="about">
+                <a href="about.html"><span class="image-overlay">
+                  <span class="content" id="about-me">About Me</span>
+                </span></a>
+                <img src="img/about-cube1.jpg">
               </div>
             </div>
-          </div> <!-- /container -->
-        </section><!--portfolio concepts and goals end-->
-        <section class="main-section">
-          <section class="about-me-contact-me-section">
-            <div class="container-fluid about" id="about"><!--container about start-->
-              <div class="section-title">
-                <h1><a href="about.html" id="main-links">About Me</a></h1>
-              </div><!--section-title end-->
-            </div><!--container fluid about end-->  
-            <div class="container-fluid contact" id="contact"><!--container contact start-->
-              <div class="section-title">
-                <h1><a href="contact.html" id="main-links">Contact Me</a></h1>
+            <div class="col-md-6 col-lg-6 col-sm-12" id="contactContent">
+              <div class="image-wrapper" id="contact">
+                <a href="contact.html"><span class="image-overlay">
+                  <span class="content" id="contact-me">Contact Me</span>
+                </span></a>
+                <img src="img/contact-photo-wide.jpg">
               </div>
-            </div><!-- container contact end-->
-          </section><!--about me contact me section end-->
-          <section class="my-work-section">     
-            <div class="container-fluid work" id="work"><!--container work start-->
-              <div class="section-title">
-                <h1><a href="work.html" id="main-links">My Work</a></h1>
-              </div>                  
-            </div><!--container work end-->
-          </section>
-          <section class="faq-section">
-            <div class="container-fluid FAQ" id="FAQ"><!--container FAQ start-->
-              <div class="section-title">
-                <h1><a href="FAQ.html" id="main-links">FAQs</a></h1>
+            </div>
+            <div class="col-md-6 col-lg-6 col-sm-12" id="workContent">
+              <div class="image-wrapper" id="work">
+                <a href="work.html"><span class="image-overlay">
+                  <span class="content" id="my-work">My Work</span>
+                </span></a>
+                <img src="img/my-work-html.png">
               </div>
-            </div><!--container FAQ end-->
-          </section>
-          <section class="videos-section">
-            <div class="container-fluid videos" id="videos">
-              <div class="section-title">
-                <h1><a href="videos.html" id="main-links">Videos</a></h1>
+            </div>
+            <div class="col-md-6 col-lg-6 col-sm-12" id="faqContent">
+              <div class="image-wrapper" id="faq">
+                <a href="FAQ.html"><span class="image-overlay">
+                  <span class="content" id="faq">FAQs</span>
+                </span></a>
+                <img src="img/question-mark-463497_1920.jpg">
               </div>
-            </div><!--videos container fluid end-->
-          </section><!--my work faqs section end-->
-        </section><!--main section end-->
-        <!--<div class="row" id="video-row-1">
-          <div class="col-sm-12 col-md-4">
-            <div class="video-1">
-              <iframe width="100%" height="158" src="https://www.youtube.com/embed/qqrvm2XDvpQ" frameborder="0" allowfullscreen></iframe>
-            </div><!--video-1 end-->
-          <!--</div><!--col end-->
-          <!--<div class="col-sm-12 col-md-4">
-            <div class="video-2">
-              <iframe width="100%" height="158" src="https://www.youtube.com/embed/3nUKwvFsjA4" frameborder="0" allowfullscreen></iframe>
-            </div><!--video-2 end-->
-          <!--</div><!--col end-->
-          <!--<div class="col-sm-12 col-md-4">
-            <div class="video-3">
-              <iframe width="100%" height="158" src="https://www.youtube.com/embed/5ndj6xn2P0c" frameborder="0" allowfullscreen></iframe>
-            </div><!--video-3 end-->
-          <!--</div><!--col end-->          
-        <!--</div><!--video-row-1 end-->
-      <!--</div><!--container videos end-->
+            </div>            
+          </div>
+        </article>
+      </div>
+    </div>
 
-        <footer> 
-              &copy; Chris Joiner | Web Developer 2015 
-              <a href="https://twitter.com/cjoiner20" class="twitter-follow-button" data-show-count="false">Follow @cjoiner20</a>
-              <div class="fb-like" data-href="https://chris-joiner.bitballoon.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-        </footer>
-      </div><!--styles (home) div end-->
-    <!--Curriculum Vitae Large modal start-->
-    <!-- 
-    ================================================== -->
-    <!-- Can place script tags with JavaScript files here -->
-    <script type="text/javascript">
-      var $root = $('html, body');
-        $('.navbar-nav a').click(function() {
-          var href = $.attr(this, 'href');
-          $root.animate({
-            scrollTop: $(href).offset().top
-          }, 500, function () {
-            window.location.hash = href;
-          });
-          return false;
-        });
-    </script>
+    <footer class="mainFooter">
+      <p>&copy 2016 <a href="www.chrisjoiner.co.uk">chrisjoiner.co.uk</a></p>
+    </footer>
+
   </body>
 </html>
