--- a/work.html
+++ b/work.html
@@ -1,112 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>My Work</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<!-- Bootstrap core CSS -->
-		<link href="css/bootstrap.css" rel="stylesheet">
-		<!-- Custom styles for this template go here -->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>My Work</title>
 
+    <!--css files start here-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/new_style.css">
+    <link rel="stylesheet" href="css/new_work.css">
+    <!--css files end here-->
 
-		<!-- jQuery starts here (required for Bootstrap to work) -->
-		<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-		<script src="js/jquery.media.js" type="text/javascript"></script>
-		<!--jQuery files end here-->
+	<!-- jQuery starts here (required for Bootstrap to work) -->
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+	<script src="js/jquery.media.js" type="text/javascript"></script>
+	<!--jQuery files end here-->
 
-		<!-- JavaScript files start here-->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-		<script src="js/scripts.js"></script>
-		<!--JavaScript files end here-->
+	<!-- JavaScript files start here-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<!--JavaScript files end here-->
 
-		<!--Twitter starts here-->
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-		<!--Twitter ends here-->
+    <!--Tooltips jQuery start here-->
+    <script>
+      $(function () {
+        $('#date').tooltip();
+      });
+    </script>
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <script> 
+      $(function () {
+        $('#work').tooltip();
+      });
+    </script>
+    <!--Tooltips jQuery end-->
 
-		<!--css files start here-->
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/work.css" rel="stylesheet">		
-		<link href="css/general.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
-		<!--css files end here-->
-	</head>
-	<body>
-	    <!--navbar starts here-->
-	    <!-- Main jumbotron for a primary marketing message or call to action -->
-	    <nav class="navbar navbar-default navbar-fixed-top" role="navigation" id="pages">
-	      <div class="container-fluid-navigation-pages">
-	        <div class="row" id="nav-row">
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-project-name">
-	              <a href="index.html">Chris Joiner | Web Developer</a>
-	            </div>
-	          </div><!--col end-->
-	          <div class="col-sm-8 col-md-6">
-	            <div class="navbar-header">
-	              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-	              <span class="sr-only">Toggle navigation</span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              <span class="icon-bar"></span>
-	              </button>
-	            </div><!--navbar-header end-->
-	            <div class="navbar-collapse collapse">
-	              <ul class="nav navbar-nav">
-	                <li><a href="index.html"><span class="glyphicon glyphicon-home"></span></a></li>
-	                <li><a href="about.html">About</a></li>
-	                <li><a href="work.html">Work</a></li>
-	                <li><a href="contact.html">Contact</a></li>
-	                <li><a href="FAQ.html">FAQ</a></li>
-	                <li><a href="videos.html">Videos</a></li>
-	              </ul>
-	            </div><!--navbar-collapse-collapse end-->
-	          </div><!--col end-->
-	        </div><!--nav-row ends-->
-	      </div><!--nav container ends-->
-	    </nav><!--navbar ends-->
-	    <div class="styles">
-			<div class="container-fluid page-styles">	
-		    	<div class="work">
-			    	<div class="header">
-		          		<h1>My Work</h1>
-		          	</div>
-		          	<div class="work-page-pic">
-			        </div><!--work-page-pic end-->
-		          	<div class="work-container">
-		          		<h2 style="color: #565656; margin-bottom: 20px">Current Projects:</h2>
-						<div class="row" id="row-1">
-							<div class="col-xs-12 col-sm-6 col-md-3" id="box-1">
-								<div class="image first" id="0">
-									<a href="http://thewhiteleycollection.herokuapp.com/" title="Click here to check out the Whiteley Collection!" id="image-first" target="_blank">The Whiteley Collection</a>
-								</div>
-							</div><!--box-1 end-->
-							<div class="col-xs-12 col-sm-6 col-md-3" id="box-2">
-								<div class="image second" id="1">
-									<a href="http://farfieldboxers.bitballoon.com" title="Click here to check out Farfield Boxers!" id="image-second">Farfield Boxers</a>
-								</div>
-							</div><!--box-2 end-->
-							<div class="col-xs-12 col-sm-6 col-md-3" id="box-3">
-								<div class="image third" id="2">
-									<a href="#" title="We are working on this at the moment. Check back soon!" id="image-third">Audio Restored - Multi-track</a>
-								</div>
-							</div><!--box-3 end-->
-							<div class="col-xs-12 col-sm-6 col-md-3" id="box-4">
-								<div class="image fourth" id="3">
-									<a href="#" title="We are working on this at the moment. Check back soon!" id="image-fourth">Project 4</a>
-								</div>
-							</div><!--box-4 end-->
-						</div><!--row-1 end-->
-					</div><!--work-container end-->
-		        </div><!--work end-->
-			</div><!--container-fluid page styles end -->	
-	        <footer> 
-	              &copy; Chris Joiner | Web Developer 2015 
-	              <a href="https://twitter.com/cjoiner20" class="twitter-follow-button" data-show-count="false">Follow @cjoiner20</a>
-	              <div class="fb-like" data-href="https://chris-joiner.bitballoon.com" data-layout="button" data-action="like" data-show-faces="true" data-share="true"></div>
-	        </footer>	
-	    </div><!--styles end-->		
+  </head>
+	<body class="body">
+	    <header class="main-header">
+			<content class="main-header-image-text">
+				<h1>My Work</h1>
+				<p>Check out my current projects</p>
+			</content>
+	    	<img src="img/laptop_bw.jpeg">
+			<nav>
+				<ul>
+				  <li><a href="index.html">Home</span></a></li>
+				  <li><a href="about.html">About</a></li>
+				  <li><a href="contact.html">Contact</a></li>
+				  <li class="active"><a href="work.html">Work</a></li>
+				  <li><a href="FAQ.html">FAQ</a></li>
+				</ul>
+			</nav>
+	    </header>
+
+		<div class="mainContent">
+      		<div class="content">
+		        <article class="topContent">
+		          <h2>Current Projects:</h2>
+		          <div class="row" id="my-work">
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="whiteleyContent">
+		              <div class="image-wrapper" id="whiteley">
+		                <a href="http://thewhiteleycollection.herokuapp.com/"><span class="image-overlay">
+		                  <span class="content" id="the-whiteley-collection"></span>
+		                </span></a>
+		              </div>
+		            </div>
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="farfieldContent">
+		              <div class="image-wrapper" id="farfield">
+		                <a href="http://farfieldboxers.bitballoon.com"><span class="image-overlay" id="Farfield">
+		                  <span class="content" id="farfield-boxers"></span>
+		                </span></a>
+		              </div>
+		            </div>
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="comingSoonContent">
+		              <div class="image-wrapper" id="proj-3">
+		                <a href="Optimized-work-in-progress2.jpg"><span class="image-overlay">
+		                  <span class="content" id="project-3"></span>
+		                </span></a>
+		              </div>
+		            </div>
+		            <div class="col-md-6 col-lg-6 col-sm-12" id="comingSoonContent">
+		              <div class="image-wrapper" id="proj-4">
+		                <a href="Optimized-work-in-progress2.jpg"><span class="image-overlay">
+		                  <span class="content" id="project-4"></span>
+		                </span></a>
+		              </div>
+		            </div>            
+		          </div>
+		        </article>				
+			</div>
+		</div>
+
+	    <footer class="mainFooter">
+	      <p>&copy 2016 <a href="www.chrisjoiner.co.uk">chrisjoiner.co.uk</a></p>
+	    </footer>
+
 	</body>
 </html>
 	    
